[package]
name = "topngx"
version = "0.3.0"
authors = ["Garrett Squire <github@garrettsquire.com>"]
edition = "2018"
description = "Top for NGINX"
repository = "https://github.com/gsquire/topngx"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0"
atty = "0.2"
crossbeam-channel = "0.4"
crossterm = "0.17"
env_logger = "0.7"
log = "0.4"
once_cell = "1.4"
rayon = "1.3"
regex = "1.3"
rusqlite = "0.23"
structopt = "0.3"
tabwriter = "1.2"

[features]
bundled-sqlite = ["rusqlite/bundled"]

[profile.release]
lto = true
codegen-units = 1
