[package]
name = "topngx"
version = "0.4.0"
authors = ["Garrett Squire <github@garrettsquire.com>"]
edition = "2018"
description = "Top for NGINX"
repository = "https://github.com/gsquire/topngx"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0"
atty = "0.2"
crossbeam-channel = "0.5"
crossterm = "0.25"
ctrlc = "3.2"
env_logger = "0.9"
log = "0.4"
once_cell = "1.13"
rayon = "1.5"
regex = "1.6"
rusqlite = "0.28"
structopt = "0.3"
tabwriter = "1.2"

[features]
bundled-sqlite = ["rusqlite/bundled"]

[profile.release]
lto = true
codegen-units = 1
