[package]
name = "topngx"
version = "0.5.0"
authors = ["Garrett Squire <github@garrettsquire.com>"]
edition = "2024"
description = "Top for NGINX"
repository = "https://github.com/gsquire/topngx"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0"
atty = "0.2"
crossbeam-channel = "0.5"
crossterm = "0.29"
ctrlc = "3.4"
env_logger = "0.11"
log = "0.4"
once_cell = "1.21"
rayon = "1.10"
regex = "1.11"
rusqlite = "0.34"
structopt = "0.3"
tabwriter = "1.4"

[features]
bundled-sqlite = ["rusqlite/bundled"]

[profile.release]
lto = true
codegen-units = 1
